# News_aggregator_agent

./: README.md  SPEECH_TO_TEXT_GUIDE.md  cli_app.py  env_example.txt  main.py  pyproject.toml  requirements.txt  setup.py  test_setup.py
agent/: agentic_workflow.py  cli.py  example_usage.py
config/: config.yaml
frontend/: Orb.js  README.md  index.html  script.js  styles.css
prompt_library/: prompt.py
tools/: news_aggregation_tools.py  speech_tools.py  tts_tools.py
utils/: debug.py  evaluate.py
